<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/entry"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="370dp"
        android:layout_height="106dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/roboto_mono_bold"
        android:text="@string/app_name"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/app_name" />

    <Button
        android:id="@+id/button"
        android:layout_width="165dp"
        android:layout_height="48dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="22dp"
        android:background="#009688"
        android:onClick="signin"
        android:text="@string/loginbt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regPassword" />

    <EditText
        android:id="@+id/regUsername"
        android:layout_width="373dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="41dp"
        android:background="#FCF7F7"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/regPassword"
        android:layout_width="371dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:background="#FDF8F8"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regUsername" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="208dp"
        android:text="@string/notauser"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regPassword" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="73dp"
        android:layout_height="42dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="136dp"
        android:onClick="signup"
        android:text="@string/signupbt"
        android:textColor="@color/links"
        android:textSize="19sp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>